# telegram_accounting_bot

./: .env.example  .gitignore  README.md  bot.py  config.py  main.py  pyproject.toml
db/: mysql.py  redis.py
handlers/: accounting.py  admin.py
keyboards/: inline.py
middlewares/: access.py
web/: app.py
web/templates/: transactions.html
